cover photo fix

--- a/free-master/index.html
+++ b/free-master/index.html
@@ -37,7 +37,7 @@ layout: splash
 	<!-- Section: services -->
     <section id="service" class="home-section text-left">
     <div class="row">
-		<div class="col-lg-12" style="padding: 0px 100px; margin: 0px;">
+		<div class="col-lg-12" style="padding: 0px 10%; margin: 0px;">
 			<div class="row-fluid">
 				<div class="wow fadeInUp" data-wow-delay="0.6s" align="center">
 					<div class="section-heading" align="center">
@@ -90,7 +90,7 @@ layout: splash
 	<!-- Section: contact -->
     <section id="contact" class="home-section text-center bg-gray">
     	<div class="row">
-			<div class="col-lg-12" style="padding: 0px 100px;; margin: 0px;">
+			<div class="col-lg-12" style="padding: 0px 0px; margin: 0px;">
 			<div class="heading-contact">
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
 					<div class="wow fadeInUp" data-wow-delay="0.6s">
@@ -104,15 +104,16 @@ layout: splash
 						<br>
 						<b>Please include a link to some of your music</b><br>
 						<br>
-						(I also love to hear feedback from readers! If
+						I also love to hear feedback from readers! 
+						If
 						you have any suggestions for the blog, or aspects
 						you think could use improvement, this
-						is the place for that too)<p>
+						is the place for that too<p>
 					
 					</div>
 			</div>
 			</div>
-		<div class="container-fluid" style="margin: 0px 20%">
+		<div class="container-fluid" style="margin: 0px 10%">
 
     <div class="row-fluid" style="margin: 0px; padding: 0px;">
             <div class="boxed-grey">
@@ -213,7 +214,7 @@ layout: splash
 					<div class="col-lg-12">
 						<h3>Want to master your own music? Check out the blog:</h3>
 							<br>
-							<h1 style="font-size: 80px;">
+							<h1 style="font-size: 8vw;">
 							<a href="../"><b>Get Mastered</b></a>
 							</h1>	
 					</div>
