--- a/free-master/index.html
+++ b/free-master/index.html
@@ -90,7 +90,7 @@ layout: splash
 	<!-- Section: contact -->
     <section id="contact" class="home-section text-center bg-gray">
     	<div class="row">
-			<div class="col-lg-12" style="padding: 0px 0px; margin: 0px;">
+			<div class="col-lg-12" style="padding: 0px 10%; margin: 0px;">
 			<div class="heading-contact">
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
 					<div class="wow fadeInUp" data-wow-delay="0.6s">
@@ -113,7 +113,7 @@ layout: splash
 					</div>
 			</div>
 			</div>
-		<div class="container-fluid" style="margin: 0px 10%">
+		<div class="container-fluid" style="margin: 0px 0px;">
 
     <div class="row-fluid" style="margin: 0px; padding: 0px;">
             <div class="boxed-grey">
