--- a/free-master/index.html
+++ b/free-master/index.html
@@ -5,7 +5,7 @@ layout: splash
 
 	<!-- Section: intro -->
     <section id="intro" class="intro">
-	<div class="wow fadeInUp" data-wow-delay="0.6s">
+	<div class="wow fadeInUp" data-wow-delay="0.1s">
 	<div class="col-lg-12" >
 		<div class="slogan" style="padding-top: 0px;">
 			<h2 style="margin-bottom: 30px;"><span><a href="#service" style="color: #fff;" >GET MASTERED
@@ -39,7 +39,7 @@ layout: splash
     <div class="row">
 		<div class="col-lg-12" style="padding: 0px 10%; margin: 0px;">
 			<div class="row-fluid">
-				<div class="wow fadeInUp" data-wow-delay="0.6s" align="center">
+				<div class="wow fadeInUp" data-wow-delay="0.1s" align="center">
 					<div class="section-heading" align="center">
 						<h2 >Woah, woah, what?</h2>
 					</div>
@@ -47,7 +47,7 @@ layout: splash
 					<!-- <font color="#000000"> -->
 					<p>
 					<br>
-					My name is Keenan, and I run <span><a href="/blog"><b>Get Mastered:</b></a></span>
+					My name is Keenan, and I run <span><a href="/"><b>Get Mastered:</b></a></span>
 					a tutorial blog that teaches musicians and audio engineers how to master
 					their own music.<br>
 					<br>
@@ -93,7 +93,7 @@ layout: splash
 			<div class="col-lg-12" style="padding: 0px 10%; margin: 0px;">
 			<div class="heading-contact">
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
-					<div class="wow fadeInUp" data-wow-delay="0.6s">
+					<div class="wow fadeInUp" data-wow-delay="0.1s">
 					<div class="section-heading">
 					<h2>Submit your music!</h2>
 					</div>
@@ -209,7 +209,7 @@ layout: splash
 	<!-- Section: blog -->
 	<section>
 		<section id="blog-link" class="home-section text-center bg-white">
-		<div class="wow fadeInUp" data-wow-delay="0.4s">
+		<div class="wow fadeInUp" data-wow-delay="0.1s">
 				<div class="row-fluid" style="padding: 50px 0px 200px 0px; margin: 0px;">
 					<div class="col-lg-12">
 						<h3>Want to master your own music? Check out the blog:</h3>
