--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -26,13 +26,13 @@ layout: default
             <br>
       	<br>
 
-      	<img src="Pricing.png" alt="pricing" style="max-width: 30%;">
+      	<img src="Pricing.png" alt="pricing" width="50%">
 
       	<!-- <img src="Pricing-2.png" alt="pricing EP and Album" style="max-width: 40%;"> -->
 <br>
 <br>
 
-		I have a <b>garunteed turnaround time of one week or less</b>, and I can even help you get your songs on popular music services, such as Spotify, iTunes, and Google Play. Again, drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
+		I have a <b>guarunteed turnaround time of one week or less</b>, and I can even help you get your songs on popular music services, such as Spotify, iTunes, and Google Play. Again, drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
 
 		<br>
 		<br>
