--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -56,10 +56,16 @@ layout: default
             <br> -->
             <p>
 
+            <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i> - Matthew O'Connor
+            <br>
+            <br>   
+
             <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
              - Max Gunther
             <br>
-            <br>            
+            <br>   
+
+
 
 
 
