--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -56,6 +56,10 @@ layout: default
             <br> -->
             <p>
 
+            <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i> - Andrew Nappo
+            <br>
+            <br>
+
             <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i> - Matthew O'Connor
             <br>
             <br>   
@@ -64,6 +68,8 @@ layout: default
              - Max Gunther
             <br>
             <br>   
+
+
 
 
 
