search and revamp

--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -9,36 +9,48 @@ layout: default
 		<h1 class="master-color" style="font-size: 60px;">Get Mastered By Me </h1>
   <div class="row-fluid">
       <p style="font-size: 18px;">
-      	Learning how to master your own music takes a lot of time. Sometimes, my readers just want great sounding, ready for release music without the hassle of learning all the nitty-gritty details.
 
-      	<br>
-      	<br>
+            Do your mixes need that "<b>extra something</b>"?
 
-      	If you want to join the crowd and bring your music to a professional level, this if your chance! Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I'm able to offer you <i>extremely</i> competitive rates that you really won't find anywhere else.
+            <br>
+            <br>
+
+            Do you want your mixes <b>loud </b>enough to compete with commercial standards?
+
+            <br>
+            <br>
+
+            Do you want the <b>absolute best price</b> for a professional mastering job, with a human (not an algorithm!) at the reins?
+
+            <br>
+            <br>
+
+            You've come to the right place.
+
+            <br>
+            <br>
+
+
+             Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I can give you professional quality masters at <i>extremely</i> competitive rates that you really won't find anywhere else (I did the research, and you can too)
 <br>
 <br>
 
-      	If that's not enough, I'll even throw you a deal: <b>for every five songs I master for you, I'll master a sixth for free</b>. 
-      	That's a six song EP for the price of a five song EP, or a twelve song album for the price of a ten song album (I just checked with a calculator, those numbers are right)
+      	If that's not enough: <b>for every five songs I master for you, I'll master a sixth for free</b>. 
+            <br>
 <br>
-<br>
-      	Interested? Email me at <a href="mailto:services@getmastered.com">services@getmastered.com</a> and let me know what I can help you with! My rates are:
+      	Interested? Email me at <a href="mailto:services@getmastered.com">services@getmastered.com</a> and let me know what I can help you with. My rates are:
             <br>
       	<br>
 
-      	<img src="Pricing.png" alt="pricing" width="25%">
+      	<img src="Pricing-3.png" alt="pricing" width="100%">
 
       	<!-- <img src="Pricing-2.png" alt="pricing EP and Album" style="max-width: 40%;"> -->
 <br>
 <br>
 
-		I have a <b>guarunteed turnaround time of one week or less</b>, and I can even help you get your songs on popular music services, such as Spotify, iTunes, and Google Play. Again, drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
+		I can even help you get your songs on popular music services, such as Spotify, Apple Music, and Google Play. Drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
 
 		<br>
-		<br>
-            It's only with the support of readers like you that I am able keep this whole site ad-free. 
-            Thanks for helping to keep it that way.
-            <br>
       	<br>
             Hope to hear you soon,
             <br>
@@ -47,7 +59,7 @@ layout: default
             <br>
       </p>
 
-            <h3>What are people saying about my services?</h3>
+            <h3>What are people saying about me?</h3>
             <!-- <br>
             <br>
             <i>content</i>
