--- a/free-master/index.html
+++ b/free-master/index.html
@@ -8,13 +8,16 @@ layout: splash
 	<div class="wow fadeInUp" data-wow-delay="0.1s">
 	<div class="col-lg-12" >
 		<div class="slogan" style="padding-top: 0px;">
-			<h2 style="margin-bottom: 30px;"><span><a href="#service" style="color: #fff;" >GET MASTERED
+			<h2 style="margin-bottom: 30px;"><span><a href="#contact" style="color: #fff;">GET MASTERED
 				<br>
 				FOR FREE</a></span></h2>
+				<br>
+				<br>
+				<br>
+				<br>
+				<h4 style="color: #aaa;" > <b>scroll for more!</b> </h4>
 
-				<h4 style="color: #aaa;" > (scroll for a limited time offer) </h4>
-
-				<a href="#service" class="btn btn-circle hidden-sm hidden-xs">
+				<a href="#contact" class="btn btn-circle hidden-sm hidden-xs">
 				<i class="fa fa-angle-double-down animated"></i>
 			</a>
 
@@ -33,55 +36,6 @@ layout: splash
     </section>
 	<!-- /Section: intro -->
 	
-
-	<!-- Section: services -->
-    <section id="service" class="home-section text-left">
-    <div class="row">
-		<div class="col-lg-12" style="padding: 0px 10%; margin: 0px;">
-			<div class="row-fluid">
-				<div class="wow fadeInUp" data-wow-delay="0.1s" align="center">
-					<div class="section-heading" align="center">
-						<h2 >Woah, woah, what?</h2>
-					</div>
-
-					<!-- <font color="#000000"> -->
-					<p>
-					<br>
-					My name is Keenan, and I run <span><a href="/"><b>Get Mastered:</b></a></span>
-					a tutorial blog that teaches musicians and audio engineers how to master
-					their own music.<br>
-					<br>
-					In every rotation of posts, I master songs submitted by
-					musicians like you to point out techniques I use while mastering music.
-					<br>
-					<br>
-					What does this mean for you?
-					<br>
-					<br>
-				</p>
-				<h4 style="line-height: 30px;">
-					If you're lucky enough, I will master a song for you AND 
-					feature it on the blog, all at no
-					price to you!
-				</h4>
-					<p>
-						<br>
-					Free mastering and free publicity... sure doesn't sound like an opportunity to pass up.
-					<br>
-					<br>
-					Keep on scrolling for submission info.
-
-							<div style="padding: 0px 10px 0px 0px; margin-top: 0px;">
-							<a href="#contact" class="btn btn-circle hidden-sm hidden-xs">
-							<i class="fa fa-angle-double-down animated"></i>
-							</a>
-							</div>
-
-				</div>
-			</div>
-        </div>
-    </div>
-	</section>
 	<!-- /Section: services -->
 	
 
@@ -95,20 +49,17 @@ layout: splash
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
 					<div class="wow fadeInUp" data-wow-delay="0.1s">
 					<div class="section-heading">
-					<h2>Submit your music!</h2>
+					<h2 style="font-size: 70px;">Limited time opportunity!</h2>
 					</div>
 					<br>
 					<br>
-					<p>Use the form below to reach out to me and get your song
-						featured on Get Mastered!<br>
+					<p style="font-size: 20px;">
+						Send me a link to some of your music using the form below and get automatically entered for a chance to Get Mastered totally on the free!
 						<br>
-						<b>Please include a link to some of your music</b><br>
 						<br>
-						I also love to hear feedback from readers! 
-						If
-						you have any suggestions for the blog, or aspects
-						you think could use improvement, this
-						is the place for that too<p>
+						<b>Please include a link to some of your music in the form below</b><br>
+						<br>
+					</p>
 					
 					</div>
 			</div>
@@ -139,7 +90,6 @@ layout: splash
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
                                 <option value="Get Mastered: Submission">Music Submission</option>
-                                <option value="Get Mastered: Other">Feedback</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
@@ -159,10 +109,19 @@ layout: splash
                 </div>
                 </form>
             </div>
-            <p style="color: #aaa;">
+<!--             <p style="color: #aaa;">
             	<br>
-            	<i>Please be patient with my response to your submission or feedback! I get a lot of these</i></p>
+            	<i>Please be patient with my response to your submission or feedback! I get a lot of these</i></p> -->
             <div class="row-fluid">
+            	<div class="row-fluid" style="padding: 50px 0px 200px 0px; margin: 0px;">
+					<div class="col-lg-12">
+						<p style="font-size: 40px;"><i>Want secrets to better recording and mixing? Check out the blog:</i></p>
+							<br>
+							<h1 style="font-size: 8vw;">
+							<a href="../"><b>Get Mastered</b></a>
+							</h1>	
+					</div>
+				</div>
 			<div class="col-lg-2 col-lg-offset-5">
 				<hr class="marginbot-40">
 			</div>
@@ -207,21 +166,7 @@ layout: splash
 	<!-- /Section: contact -->
 
 	<!-- Section: blog -->
-	<section>
-		<section id="blog-link" class="home-section text-center bg-white">
-		<div class="wow fadeInUp" data-wow-delay="0.1s">
-				<div class="row-fluid" style="padding: 50px 0px 200px 0px; margin: 0px;">
-					<div class="col-lg-12">
-						<h3>Want to master your own music? Check out the blog:</h3>
-							<br>
-							<h1 style="font-size: 8vw;">
-							<a href="../"><b>Get Mastered</b></a>
-							</h1>	
-					</div>
-				</div>
-			</div>
-			
-	</section>
+
 	<!-- /Section: blog -->
 
 
