--- a/free-master/index.html
+++ b/free-master/index.html
@@ -15,7 +15,7 @@ layout: splash
 				<br>
 				<br>
 				<br>
-				<h4 style="color: #aaa;" > <b>scroll for more!</b> </h4>
+				<h4 style="color: #aaa;" > <b>scroll down to submit your music</b> </h4>
 
 				<a href="#contact" class="btn btn-circle hidden-sm hidden-xs">
 				<i class="fa fa-angle-double-down animated"></i>
@@ -54,10 +54,9 @@ layout: splash
 					<br>
 					<br>
 					<p style="font-size: 20px;">
-						Send me a link to some of your music using the form below and get automatically entered for a chance to Get Mastered totally on the free!
+						Send me a link to a mix or demo to be entered for a chance to Get Mastered completely free of charge
 						<br>
-						<br>
-						<b>Please include a link to some of your music in the form below</b><br>
+
 						<br>
 					</p>
 					
@@ -89,7 +88,7 @@ layout: splash
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Get Mastered: Submission">Music Submission</option>
+                                <option value="Get Mastered: Submission">Free Master</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
@@ -104,7 +103,7 @@ layout: splash
                     </div>
                     <div class="col-md-12">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                            Send Message</button>
+                            Submit</button>
                     </div>
                 </div>
                 </form>
