--- a/free-master/index.html
+++ b/free-master/index.html
@@ -49,12 +49,14 @@ layout: splash
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
 					<div class="wow fadeInUp" data-wow-delay="0.1s">
 					<div class="section-heading">
-					<h2 style="font-size: 70px;">Limited time opportunity!</h2>
+					<h2 style="font-size: 70px;">Submit Your Music Now</h2>
 					</div>
 					<br>
 					<br>
 					<p style="font-size: 20px;">
-						Send me a link to a mix or demo to be entered for a chance to Get Mastered completely free of charge
+						Send me a link to a mix or demo to be entered for a chance to Get Mastered, completely free of charge. 
+						<br>
+						No fine print.
 						<br>
 
 						<br>
@@ -114,7 +116,7 @@ layout: splash
             <div class="row-fluid">
             	<div class="row-fluid" style="padding: 50px 0px 200px 0px; margin: 0px;">
 					<div class="col-lg-12">
-						<p style="font-size: 40px;"><i>Want secrets to better recording and mixing? Check out the blog:</i></p>
+						<p style="font-size: 40px;"><i>Want tips for better recording and mixing? Check out the blog:</i></p>
 							<br>
 							<h1 style="font-size: 8vw;">
 							<a href="../"><b>Get Mastered</b></a>
