--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -1,39 +1,35 @@
 ---
 title: Mastering Services
-layout: default
+layout: splash
 ---
 
 
-<section id="Services">
-	<div class="row-fluid" style="padding: 8px 0px 100px 0px;">
-		<h1 class="master-color" style="font-size: 60px;">Get Mastered By Me </h1>
+<section id="Services" align="center">
+	<div class="col-lg-12" style="padding: 100px 100px;">
+		<h1 style="font-size: 60px;">Looking for unheard of mastering rates?</h1>
   <div class="row-fluid">
       <p style="font-size: 18px;">
 
-            Do your mixes need that "<b>extra something</b>"?
 
-            <br>
-            <br>
-
-            Do you want your mixes <b>loud </b>enough to compete with commercial standards?
-
-            <br>
-            <br>
-
-            Do you want the <b>absolute best price</b> for a professional mastering job, with a human (not an algorithm!) at the reins?
-
-            <br>
-            <br>
-
-            You've come to the right place.
+            <b>You've come to the right place.</b>
 
             <br>
             <br>
 
 
-             Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I can give you professional quality masters at <i>extremely</i> competitive rates that you really won't find anywhere else (I did the research, and you can too)
+             Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I can give you professional quality masters at <i>extremely</i> competitive rates that you really won't find anywhere else (I did the research, and you can too).
 <br>
 <br>
+
+            Unfortunately for mastering engineers charging over $100 per song, I also have the equipment to compete, and the ears to take your music to a professional level.
+<br>
+<br>        Skeptical?
+
+</p>
+<h2>
+            <a href="/free-master">Get mastered for free</a> before you even pay a dime!
+</h2>
+<p>
 
       	If that's not enough: <b>for every five songs I master for you, I'll master a sixth for free</b>. 
             <br>
@@ -48,7 +44,7 @@ layout: default
 <br>
 <br>
 
-		I can even help you get your songs on popular music services, such as Spotify, Apple Music, and Google Play. Drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
+		I can even help you get your songs on popular music services, such as Spotify, Apple Music, and Google Play. Again, drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
 
 		<br>
       	<br>
@@ -59,6 +55,8 @@ layout: default
             <br>
       </p>
 
+
+
             <h3>What are people saying about me?</h3>
             <!-- <br>
             <br>
@@ -68,20 +66,29 @@ layout: default
             <br> -->
             <p>
 
-            <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i> - Andrew Nappo
+            <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i>
+            <br>
+            Andrew Nappo
             <br>
             <br>
 
-            <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i> - Matthew O'Connor
+            <i>"I had a great time working with Keenan from Get Mastered. He approached my music with an open-minded, collaborative attitude, offering constructive advice and expertise while still working to retain the spirit and vision of what I was trying to make. He's a talented engineer with a solid ear - I would recommend him to anyone!"</i>
+            <br>
+            Matthew O'Connor 
             <br>
             <br>   
 
             <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
-             - Max Gunther
+            <br>
+            Max Gunther
             <br>
             <br>   
 
 
+
+          <div class="row-fluid bg-white" style="padding: 0px; margin: 0px;">
+      {% include mailing-list-signup.html %}
+    </div>
 
 
 
@@ -93,3 +100,27 @@ layout: default
 </div>
 
 </section>
+
+    <!-- Core JavaScript Files -->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>  
+      <script src="/js/jquery.scrollTo.js"></script>
+      <script src="/js/wow.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="/js/custom.js"></script>
+
+</body>
+
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MSTFPS"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MSTFPS');</script>
+<!-- End Google Tag Manager -->
+
+
+</html>
