--- a/directory/digital-audio/index.html
+++ b/directory/digital-audio/index.html
@@ -1,13 +1,13 @@
 ---
-title: Reverb Posts
+title: Digital Audio Posts
 layout: default
 ---
 
 
 <section id="sound-waves">
 	<div class="row-fluid" style="padding: 8px 0px 700px 0px;">
-		<h3>{{ page.title }}</h3>
-{% for post in site.tags.reverb %}
+		<h3> Digital Audio Posts </h3>
+{% for post in site.tags.digital-audio %}
   <div class="row-fluid">
       <p style="font-size: 14px; line-height: 0.3em;"><a href="{{ post.url }}"><u>{{ post.title }}</u></a></p>
   </div>
