--- a/directory/mastering/index.html
+++ b/directory/mastering/index.html
@@ -1,13 +1,13 @@
 ---
-title: Analog vs Digital Posts
+title: Mastering Posts
 layout: default
 ---
 
 
 <section id="sound-waves">
 	<div class="row-fluid" style="padding: 8px 0px 700px 0px;">
-		<h3> Analog vs Digital Posts </h3>
-{% for post in site.tags.analog-vs-digital %}
+		<h3>{{ page.title }}</h3>
+{% for post in site.tags.mastering %}
   <div class="row-fluid">
       <p style="font-size: 14px; line-height: 0.3em;"><a href="{{ post.url }}"><u>{{ post.title }}</u></a></p>
   </div>
