--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -5,7 +5,9 @@ layout: splash
 
 
 <section id="Services" align="center">
-	<div class="col-lg-12" style="padding: 100px 100px;">
+  <div class="col-lg-2">
+  </div>
+	<div class="col-lg-8" style="padding-top: 100px;">
 		<h1 style="font-size: 60px;">Looking for unheard of mastering rates?</h1>
   <div class="row-fluid">
       <p style="font-size: 18px;">
@@ -38,7 +40,9 @@ layout: splash
             <br>
       	<br>
 
-      	<img src="Pricing-3.png" alt="pricing" width="100%">
+      	<img class="hidden-sm hidden-xs hidden-md" src="Pricing-3.png" alt="pricing" width="100%">
+
+        <img class="hidden-lg hidden-xl" src="Pricing-mobile.png" alt="pricing" width="100%">
 
       	<!-- <img src="Pricing-2.png" alt="pricing EP and Album" style="max-width: 40%;"> -->
 <br>
@@ -98,6 +102,9 @@ layout: splash
       </p>
   </div>
 </div>
+
+<div class="col-lg-2">
+  </div>
 
 </section>
 
