--- a/free-master/index.html
+++ b/free-master/index.html
@@ -75,7 +75,7 @@ layout: splash
                         <div class="form-group">
                             <label for="name">
                                 Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" style=" text-align: left;" />
                         </div>
                         <div class="form-group">
                             <label for="email">
@@ -83,7 +83,7 @@ layout: splash
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
+                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" style=" text-align: left;"/></div>
                         </div>
                         <div class="form-group">
                             <label for="subject">
@@ -100,7 +100,7 @@ layout: splash
                             <label for="name">
                                 Message</label>
                             <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Remember: include a link to your music!"></textarea>
+                                placeholder="Remember: include a link to your music!" style=" text-align: left;"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
