--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -21,10 +21,6 @@ layout: splash
 
              Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I can give you professional quality masters at <i>extremely</i> competitive rates that you really won't find anywhere else (I did the research, and you can too).
 <br>
-<br>
-
-            Unfortunately for mastering engineers charging over $100 per song, I also have the equipment to compete, and the ears to take your music to a professional level.
-<br>
 <br>        Skeptical?
 
 </p>
@@ -70,6 +66,13 @@ layout: splash
             <br> -->
             <p>
 
+
+            <i>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i>
+            <br>
+            Colin Zelin
+            <br>
+            <br>
+
             <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i>
             <br>
             Andrew Nappo
@@ -87,8 +90,6 @@ layout: splash
             Max Gunther
             <br>
             <br>   
-
-
 
           <div class="row-fluid bg-white" style="padding: 0px; margin: 0px;">
       {% include mailing-list-signup.html %}
