--- a/free-master/index.html
+++ b/free-master/index.html
@@ -54,7 +54,7 @@ layout: splash
 					<br>
 					<br>
 					<p style="font-size: 20px;">
-						Send me a link to a mix or demo to be entered for a chance to Get Mastered, completely free of charge. 
+						For a limited time, you can send me a link to a mix or demo to Get Mastered, completely free of charge. 
 						<br>
 						No fine print.
 						<br>
