--- a/free-master/index.html
+++ b/free-master/index.html
@@ -54,12 +54,10 @@ layout: splash
 					<br>
 					<br>
 					<p style="font-size: 20px;">
-						For a limited time, you can send me a link to a mix or demo to Get Mastered, completely free of charge. 
+						For a limited time, you can Get Mastered, completely free of charge. 
 						<br>
-						No fine print.
 						<br>
-
-						<br>
+						Send me a message below to get started!
 					</p>
 					
 					</div>
@@ -100,7 +98,7 @@ layout: splash
                             <label for="name">
                                 Message</label>
                             <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Remember: include a link to your music!" style=" text-align: left;"></textarea>
+                                placeholder="Please include a link to some of your music!" style=" text-align: left;"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
