--- a/free-master/index.html
+++ b/free-master/index.html
@@ -49,15 +49,12 @@ layout: splash
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
 					<div class="wow fadeInUp" data-wow-delay="0.1s">
 					<div class="section-heading">
-					<h2 style="font-size: 70px;">Submit Your Music Now</h2>
+					<h2 style="font-size: 70px;">Submit Your Music</h2>
 					</div>
-					<br>
-					<br>
+
 					<p style="font-size: 20px;">
-						For a limited time, you can Get Mastered, completely free of charge. 
-						<br>
-						<br>
-						Send me a message below to get started!
+
+						Send me a message below to Get Mastered right now!
 					</p>
 					
 					</div>
