--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -18,21 +18,30 @@ layout: splash
             <br>
             <br>
 
+            Get Mastered is home of the <b>absolute best rates</b> for a professional, release-ready master. I did the research, and I encourage you to do the same!
 
-             Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I can give you professional quality masters at <i>extremely</i> competitive rates that you really won't find anywhere else (I did the research, and you can too).
+             <!-- Since I'm based online, I don't have the overhead associated with typical mastering studios, which means I can give you professional quality masters at <i>extremely</i> competitive rates that you really won't find anywhere else (I did the research, and you can too). -->
+
+<!-- </p> -->
+<!-- <h2>
+            And right now, you can <a href="/free-master">Get mastered for free</a> before you even pay a dime!
+</h2> -->
+
+<!-- <p> -->
+
 <br>
-<br>        Skeptical?
-
-</p>
-<h2>
-            <a href="/free-master">Get mastered for free</a> before you even pay a dime!
-</h2>
-<p>
-
-      	If that's not enough: <b>for every five songs I master for you, I'll master a sixth for free</b>. 
-            <br>
 <br>
-      	Interested? Email me at <a href="mailto:services@getmastered.com">services@getmastered.com</a> and let me know what I can help you with. My rates are:
+
+        But before you pay <i>a single dime</i>, it is my policy to master a song completely for free for every new potential client. I want to prove to you how much of a difference it makes to Get Mastered; that's why I <a href="/free-master">will master your song, for free</a>, with <i>absolutely no commitment</i> on your part.
+
+        <br>
+        <br>
+
+        I also have a 100% satisfaction policy; I won't stop working on your masters until they are as crisp, punchy, and LOUD as you want them! On top of all this, I offer free mixing advice, as well as free mastering preparation advice to my clients.
+
+        <br>
+<br>
+      	Without further adieu, my rates are:
             <br>
       	<br>
 
@@ -44,9 +53,11 @@ layout: splash
 <br>
 <br>
 
-		I can even help you get your songs on popular music services, such as Spotify, Apple Music, and Google Play. Again, drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered!
+Check out <a href="/hear-the-difference/">some of my past clients</a> and see what they thought of their mastered tracks. I can even help you get your songs on popular music services, such as Spotify, Apple Music, and Google Play. <br>
+    <br>
 
-		<br>
+    <b>Interested? Drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered right now!</b>
+
       	<br>
             Hope to hear you soon,
             <br>
@@ -67,15 +78,21 @@ layout: splash
             <p>
 
 
-            <i>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i>
-            <br>
-            Colin Zelin
-            <br>
-            <br>
-
             <i>"Keenan was amazing, he worked with me throughout the process and even helped advise me on subtle ways to make my record better. He cared not just about his work process but what I did as well, and that's what makes the best records – people working together. If you want a mastering engineer to help take your recordings to the next level, Keenan's your guy."</i>
             <br>
             Andrew Nappo
+            <br>
+            <br>
+
+            <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
+            <br>
+            Max Gunther
+            <br>
+            <br> 
+
+            <i>“Keenan did an excellent job mastering my songs.  He was responsive to my notes and, as we collaborated, was quick to turn around each new draft.  I’d recommend his services to anyone looking to get their project professionally mastered.”</i>
+            <br>
+            Colin Zelin
             <br>
             <br>
 
@@ -83,13 +100,7 @@ layout: splash
             <br>
             Matthew O'Connor 
             <br>
-            <br>   
-
-            <i>"Keenan and did a great job finishing the tracks. He brought some nice stuff out in the mix that I didn't hear before and made sure that everything was very even and still had punch to it. Great work."</i>
-            <br>
-            Max Gunther
-            <br>
-            <br>   
+            <br>     
 
           <div class="row-fluid bg-white" style="padding: 0px; margin: 0px;">
       {% include mailing-list-signup.html %}
