--- a/free-master/index.html
+++ b/free-master/index.html
@@ -68,18 +68,18 @@ layout: splash
                 <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label for="name">
                                 Name</label>
                             <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" style=" text-align: left;" />
-                        </div>
+                        </div> -->
                         <div class="form-group">
                             <label for="email">
                                 Email Address</label>
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" style=" text-align: left;"/></div>
+                                <input type="email" name="_replyto" class="form-control" id="email" placeholder="Enter email" required="required" style=" text-align: left;"/></div>
                         </div>
                         <div class="form-group">
                             <label for="subject">
@@ -99,6 +99,7 @@ layout: splash
                                 placeholder="Please include a link to some of your music!" style=" text-align: left;"></textarea>
                         </div>
                     </div>
+                    <input type="hidden" name="_next" value="/thank-you" />
                     <div class="col-md-12">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
                             Submit</button>
