--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -7,6 +7,9 @@ layout: splash
 <div class="row-fluid" style="padding-top: 20%;">
 					<div class="col-lg-12" align="center">
 		<h1>Thank you for your submission!</h1>
+		<p>I will get back to you as soon as possible</p>
+		<br>
+		<br>
 
 						<p style="font-size: 40px;"><i>Want tips for better recording and mixing? Check out the blog:</i></p>
 							<br>
