--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -55,9 +55,12 @@ layout: splash
 
 Check out <a href="/hear-the-difference/">some of my past clients</a> and see what they thought of their mastered tracks. I can even help you get your songs on popular music services, such as Spotify, Apple Music, and Google Play. <br>
     <br>
+  </p>
 
-    <b>Interested? Drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered right now!</b>
 
+    <h3>Interested? Drop me a line at <a href="mailto:services@getmastered.com">services@getmastered.com</a> to Get Mastered right now!</h3>
+
+<p>
       	<br>
             Hope to hear you soon,
             <br>
