--- a/free-master/index.html
+++ b/free-master/index.html
@@ -53,7 +53,7 @@ layout: splash
 					</div>
 
 					<p style="font-size: 20px;">
-						While Get Mastered is just getting off the ground, I am offering free mastering to our lucky first site visitors, with absolutely no commitment! <br><br>
+						While Get Mastered is just getting off the ground, I am offering free mastering to lucky first site visitors, with absolutely no commitment! <br><br>
 
 						Send me a message with your project details (including some of your music) to get started!
 					</p>
