size issues on mobile fix

--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -9,7 +9,7 @@ layout: splash
   </div> -->
 	<div class="col-lg-12" style="padding: 150px 15% 0px 15%; background: url(http://i1045.photobucket.com/albums/b459/keenanhi/bg3_zpsbxllc2tb.jpg) no-repeat center center;   background-size: cover; 
   background-attachment: fixed;">
-		<h1 style="font-size: 400%; color: #FFF; text-align: center;">Looking for your personal mastering engineer?</h1>
+		<h1 style="font-size: 350%; color: #FFF; text-align: center;">Looking for your personal mastering engineer?</h1>
   <div class="row-fluid" style="padding: 0px;">
       <p style="font-size: 22px; color: #DDD;">
 
@@ -40,7 +40,7 @@ layout: splash
 </div>
 <div class="row-fluid bg-white" style="padding: 5% 15%">
 
-<p style="font-size: 32px;">
+<p style="font-size: 24px;">
   Projects with higher track counts qualify for rates even lower than $39 per song. <a href="mailto:services@getmastered.com">Contact me for more info</a>
 
   <br>
@@ -54,7 +54,7 @@ layout: splash
 
 <div class="row-fluid bg-gray" style="padding: 5% 15%">
 
-<h1 style="font-size: 400%; color: #000; text-align: center;">Ready to Get Mastered? </h1>
+<h1 style="font-size: 300%; color: #000; text-align: center;">Ready to Get Mastered? </h1>
 <br>
 <p style="font-size: 22px; color: #000;">
   Send me high quality bounces of your mixes using the form below. Make sure to read my post on <a href="/back-to-basics/Prepare-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
@@ -63,7 +63,7 @@ layout: splash
 <div style="margin-bottom: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
             </div>
-<h3>Having issues? You can also send your files, questions, and concerns to <a href="mailto:services@getmastered.com">services@getmastered.com</a></h3>
+<p><b>Having issues?</b> You can also send your files, questions, and concerns to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
 
 </div>
 
@@ -109,20 +109,13 @@ Check out <a href="/hear-the-difference/">some of my past clients</a> and see wh
             <br>
             <br>     
 
-          <div class="row-fluid bg-white" style="padding: 0px; margin: 0px;">
-      {% include mailing-list-signup.html %}
-    </div>
-
-
-
-
 
 
       </p>
         </div>
       </div>
 
-      <div class="row-fluid bg-white" style="padding-top: 100%">
+      <div class="row-fluid bg-white" style="padding-top: 10%">
 Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>, <a href="http://www.flaticon.com/authors/appzgear" title="Appzgear">Appzgear</a>, <a href="http://www.flaticon.com/authors/anton-saputro" title="Anton Saputro">Anton Saputro</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
   <br>
   </div>
