--- a/mastering-services/index.html
+++ b/mastering-services/index.html
@@ -41,7 +41,7 @@ layout: splash
 <div class="row-fluid bg-white" style="padding: 5% 15%">
 
 <p style="font-size: 24px;">
-  Projects with higher track counts qualify for rates even lower than $39 per song. <a href="mailto:services@getmastered.com">Contact me for more info</a>
+  Projects with higher track counts qualify for rates even lower than $39 per song. <a href="mailto:services@getmastered.com">Contact me for more info.</a>
 
   <br>
   <br>
@@ -60,10 +60,15 @@ layout: splash
   Send me high quality bounces of your mixes using the form below. Make sure to read my post on <a href="/back-to-basics/Prepare-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
 </p>
 
-<div style="margin-bottom: 30px; padding: 0px;">
+<div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
             </div>
-<p><b>Having issues?</b> You can also send your files, questions, and concerns to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
+
+<div class="hidden-lg hidden-xl" style="margin-bottom: 30px; padding: 0px;">
+        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
+            </div>
+
+<p><b>Having issues? On mobile?</b> You can also send your files, questions, and concerns to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
 
 </div>
 
