free master fix

--- a/free-master/index.html
+++ b/free-master/index.html
@@ -59,8 +59,12 @@ layout: splash
     <div class="row-fluid" style="margin: 0px; padding: 0px;">
 
 
-            <div style="margin-bottom: 30px; padding: 0px;">
-				<iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
+           <div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
+        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
+            </div>
+
+<div class="hidden-lg hidden-xl" style="margin-bottom: 30px; padding: 0px;">
+        <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
             </div>
 
             <p style="font-size: 20px;">Wetransfer not working? Have another query? Reach out to me using the form below, and include a link to some of your music!
