--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: splash
   <h1>How does Get Mastered provide such low rates?</h1>
 
 <p style="font-size: 24px;">
-  I founded Get Mastered because there is simply nowhere for musicians to get a professional, quality mastering job for under $100 per song. I've been mixing my own music for years, and I've found it impossible to get mastered at anything close to an affordable rate. 
+  I founded Get Mastered because there is simply nowhere for musicians to get a professional, quality mastering job for under $100 per song. I've been mixing music for years, and I've found it impossible to get mastered at anything close to an affordable rate. 
 
 <br>
 <br>
