--- a/free-master/index.html
+++ b/free-master/index.html
@@ -46,7 +46,7 @@ layout: splash
 					</div>
 
 					<p style="font-size: 20px;">
-						To show you how much of a difference mastering can make, Get Mastered offers free mastering to new clients with absolutely no commitment! <br><br>
+						To show you how much of a difference we can make, Get Mastered offers free mastering for potential clients with absolutely no commitment! <br><br>
 
 						Send me a high quality bounce of your mix using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
 					</p>
