--- a/free-master/index.html
+++ b/free-master/index.html
@@ -35,25 +35,31 @@ layout: splash
 	
 
 	<!-- Section: contact -->
-    <section id="contact" class="home-section text-center bg-gray">
+    <section id="contact" class="home-section text-center" style="background: url(/img/bg1.jpg) no-repeat center center;   background-size: cover; 
+  background-attachment: fixed;">
     	<div class="row">
 			<div class="col-lg-12" style="padding: 0px 10%; margin: 0px;">
 			<div class="heading-contact">
 			<div class="row-fluid" style="padding: 0px 0px 20px 18px; margin: 0px;">
 					<div class="wow fadeInUp" data-wow-delay="0.1s">
 					<div class="section-heading">
-					<h2 style="font-size: 70px;">Get Mastered For Free</h2>
+					<h2 class="hidden-sm hidden-xs hidden-md" style="font-size: 500%; color: #fff;">Get Mastered Or Mixed For Free</h2>
+
+					<h2 class="hidden-lg hidden-xl" style="font-size: 200%; color: #fff;">Get Mastered Or Mixed For Free</h2>
+
+					<p style="font-size: 20px; color: #eee;">
+						To show you how much of a difference we can make, Get Mastered offers free mastering or mixing for potential clients with absolutely no commitment!
+					</p>
+
+
 					</div>
 
-					<p style="font-size: 20px;">
-						To show you how much of a difference we can make, Get Mastered offers free mastering for potential clients with absolutely no commitment! <br><br>
-
-						Send me a high quality bounce of your mix using the form below. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible!
-					</p>
+					
 					
 					</div>
 			</div>
 			</div>
+			<h1 style="color: #fff;">Scroll for submission help</h1>
 		<div class="container-fluid" style="margin: 0px 0px;">
 
     <div class="row-fluid" style="margin: 0px; padding: 0px;">
@@ -67,7 +73,21 @@ layout: splash
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
             </div>
 
-            <p style="font-size: 20px;">Wetransfer not working? Have another query? Reach out to me using the form below, and include a link to some of your music!
+
+
+						<p style="font-size: 20px; color: #eee;">
+
+						<b>TO GET MASTERED:</b> Send me a high quality bounce of your mix using the form above. Make sure to read my post on <a href="/back-to-basics/Preparing-Your-Mix/">Preparing Your Mixes For Mastering</a> so that I can get you the best master possible! <br><br>
+
+						<b>TO GET MIXED:</b> Send me up to six high quality audio tracks, time aligned, by bouncing each track individually from the same point in your session. Due to the large time investment of a mix, we can only handle up to six tracks for free mixes.<br><br>
+
+						Don't panic: if you have more than six tracks in your mix, you can work around this limit by sending stems (e.g. a "drums" track, a "guitars" track). Alternatively, you can send more than six tracks and pay only $5 per track after the first six. <a href="https://www.youtube.com/watch?v=PVttS0kA7Uc">Here's a tutorial video of how to export tracks as individual audio files in Pro Tools and Logic</a>
+
+					</p>
+					<br>
+					<br>
+
+            <p style="font-size: 20px; color: #eee;"><b>Having issues? On mobile? Have another query?</b> Reach out to me using this form instead:
 			<br>
 		</p>
 
@@ -88,7 +108,8 @@ layout: splash
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Get Mastered: Submission">Free Master</option>
+                                <option value="Get Mastered: Submission">Mastering</option>
+                                <option value="Get Mastered: Other">Mixing</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
@@ -98,7 +119,7 @@ layout: splash
                             <label for="name">
                                 Message</label>
                             <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Please include a link to some of your music!" style=" text-align: left;"></textarea>
+                                placeholder="Your message here" style=" text-align: left;"></textarea>
                         </div>
                     </div>
                     <input type="hidden" name="_next" value="/thank-you" />
@@ -116,16 +137,14 @@ layout: splash
             <div class="row-fluid">
             	<div class="row-fluid" style="padding: 50px 0px 200px 0px; margin: 0px;">
 					<div class="col-lg-12">
-						<p style="font-size: 40px;"><i>Want tips for better recording and mixing? Check out the blog:</i></p>
+						<p style="font-size: 40px; color: #eee;"><i>Want audio tips? Check out the blog:</i></p>
 							<br>
 							<h1 style="font-size: 8vw;">
-							<a href="../"><b>Get Mastered</b></a>
+							<a href="../"><b>Get Mastered Blog</b></a>
 							</h1>	
 					</div>
 				</div>
-			<div class="col-lg-2 col-lg-offset-5">
-				<hr class="marginbot-40">
-			</div>
+			
     </div>	
 
 		</div>
