--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -6,13 +6,13 @@ layout: splash
 <div class="wow fadeInUp" data-wow-delay="0.1s">
 <div class="row-fluid" style="padding-top: 20%;">
 					<div class="col-lg-12" align="center">
-		<h1 style="text-transform: uppercase;">Thank you for your submission!</h1>
+		<h1 style="text-transform: uppercase;">Thanks for reaching out!</h1>
 		<h5>I will get back to you as soon as possible</h5>
 		<br>
 		<br>
 		<br>
 		<br>
-						<p style="font-size: 20px;"><i>Want tips for better recording and mixing? Check out the blog:</i></p>
+						<p style="font-size: 20px;"><i>Got some downtime? Check out the blog:</i></p>
 							<br>
 							<h1 style="font-size: 5vw;">
 							<a href="../"><b>Get Mastered</b></a>
