--- a/free-master/index.html
+++ b/free-master/index.html
@@ -48,9 +48,9 @@ layout: splash
 
 					<h2 class="hidden-lg hidden-xl" style="font-size: 200%; color: #fff; text-shadow: 0px 0px 20px #000;">Get Mastered Or Mixed For Free</h2>
 
-					<p style="font-size: 20px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;">
+					<!-- <p style="font-size: 20px; color: #eee; font-weight: 400; text-shadow: 0px 0px 20px #000;">
 						To show you how much of a difference we can make, Get Mastered offers first timers a free mix or master to keep
-					</p>
+					</p> -->
 
 
 					</div>
@@ -60,16 +60,16 @@ layout: splash
 			</div>
 			</div>
 
-			<h1 style="color: #fff; text-shadow: 0px 0px 20px #000;">Scroll for submission help</h1>
+			<p style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 20px; font-weight: 400;">To get started, please send a link to some of your music. Your personal audio engineer will reach out to you shortly after we receive your message</p>
 
-			<img src="/img/down-arrow.png" alt="arrow" width="10%">
+<!--			<img src="/img/down-arrow.png" alt="arrow" width="10%">
 
 
 			<div class="hidden-sm hidden-xs hidden-md" style="margin: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="390px"></iframe>
             </div>
 
-<div class="hidden-lg hidden-xl" style="margin-bottom: 30px; padding: 0px;">
+ <div class="hidden-lg hidden-xl" style="margin-bottom: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
             </div>
 
@@ -96,7 +96,7 @@ Send me up to eight high quality audio tracks, time aligned, by bouncing each tr
 					</p>
 					<br>
 					<br>
-				</div>
+				</div> -->
 
 
 		<div class="container-fluid" style="margin: 50px 0px">
@@ -106,10 +106,10 @@ Send me up to eight high quality audio tracks, time aligned, by bouncing each tr
 
            
 
-
+<!-- 
             <p style="font-size: 20px; color: #eee;"><b>Having issues? On mobile? Have another query?</b> Reach out to me using this form instead:
 			<br>
-		</p>
+		</p> -->
 
             <div class="boxed-grey">
                 <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
@@ -128,8 +128,8 @@ Send me up to eight high quality audio tracks, time aligned, by bouncing each tr
                                 Subject</label>
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
-                                <option value="Get Mastered: Submission">Mastering</option>
-                                <option value="Get Mastered: Other">Mixing</option>
+                                <option value="Get Mastered: Free Mastering">Mastering</option>
+                                <option value="Get Mastered: Free Mixing">Mixing</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
