--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@ layout: splash
           <p style="font-size: 200%; margin: 0px; color: #fff; text-shadow: 0px 0px 20px #000;" ><b>
             Get Mastered is proud to be the only mastering and mixing service that offers a free to keep master or mix to first timers</b>.<br><br>
 
-<p style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 20px; font-weight: 400;">To get started, please send a link to some of your music. Your personal audio engineer will reach out to you shortly after we receive your message</p>
-<br>
+<p style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 20px; font-weight: 400;">To get started, enter your email address below</p>
 <br>
 
-<div>
+<div >
                 <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-5 col-md-offset-3">
                         <div class="form-group">
                             <!-- <label for="email">
                                 Email Address</label> -->
@@ -64,14 +63,13 @@ layout: splash
                             </select>
                         </div> -->
                     </div>
-                    <div class="col-md-6">
+                <!--     <div class="col-md-6">
                         <div class="form-group" style="box-shadow: 0px 0px 20px #000;">
-                          <!--   <label for="name">
-                                Message</label> -->
+
                             <textarea name="message" id="message" class="form-control" rows="1" cols="25" required="required"
                                 placeholder="A link to some of your music" style=" text-align: left; font-size: 15px; font-weight: 700;"></textarea>
                         </div>
-                    </div>
+                    </div> -->
                     <input type="hidden" name="_next" value="/thank-you" />
                     <div class="col-md-1">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs"style=" box-shadow: 0px 0px 20px #000;">
