--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -7,8 +7,12 @@ layout: splash
 <div class="row-fluid">
 					<div class="col-lg-12" align="center" style="background: url(/img/speaker.png) no-repeat center center;   background-size: cover; 
   background-attachment: fixed; padding: 11%;">
-		<h1 style="text-transform: uppercase; font-size: 700%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Thanks for reaching out!</h1>
-		<h1 style="color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">We will get back to you as soon as possible</h1>
+		<h1 style="text-transform: uppercase; font-size: 700%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">You're on your way!</h1>
+		<br>
+
+		<h1 style="color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">We will reach out to the address you provided as soon as possible</h1>
+		<br>
+		<br>
 		<br>
 		<br>
 		<br>
@@ -18,6 +22,9 @@ layout: splash
 							<h1 style="font-size: 5vw;">
 							<a href="/blog/"><b>Get Mastered Blog</b></a>
 							</h1>	
+							<br>
+		<br>
+		<br>
 					</div>
 				</div>
 			</div>
