--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ layout: splash
   <div class="row-fluid" style="padding: 7% 10%; background-color:rgba(0, 0, 0, 0);">
     <h1 style="font-size: 700%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #000;">Your First Song: $0</h1>
 
-          <p style="font-size: 200%; margin: 0px; color: #fff; text-shadow: 0px 0px 20px #000;" ><b>
-            Get Mastered is proud to be the only mastering and mixing service that offers a free to keep master or mix to first timers</b>.<br><br>
+          <p style="font-size: 170%; margin: 0px; color: #eee; text-shadow: 0px 0px 20px #000;" ><b>
+            Get Mastered is proud to be the only mastering and mixing service that offers a free to keep master or mix to first timers.</b><br><br>
 
-<p style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 20px; font-weight: 400;">To get started, enter your email address below</p>
+<p style="color: #fff; text-shadow: 0px 0px 20px #000; font-size: 300%; font-weight: 400;"><b>To get started, enter your email address below</b></p>
 <br>
 
 <div >
@@ -73,7 +73,7 @@ layout: splash
                     <input type="hidden" name="_next" value="/thank-you" />
                     <div class="col-md-1">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs"style=" box-shadow: 0px 0px 20px #000;">
-                            Submit</button>
+                            Start</button>
                     </div>
                 </div>
                 </form>
@@ -82,6 +82,7 @@ layout: splash
 <!-- <a class="master-color-lighter" href="/free-master" style="font-size: 170%; text-shadow: 0px 0px 20px #000;">CLICK HERE TO GET STARTED</a> -->
 
           </p>
+          <br>
 
           <h4 style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 100px;">SCROLL FOR MORE ABOUT GET MASTERED</h4>
           <img src="/img/down-arrow.png" alt="arrow" width="10%">
